--- a/client/src/styles/appointmentFormForDialog.css
+++ b/client/src/styles/appointmentFormForDialog.css
@@ -20,4 +20,10 @@
         }
     }
 
+    .buttonsContainer {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+
 }
