--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -4,6 +4,7 @@
     background-color: var(--background);
     display: flex;
     align-items: center;
+    border-bottom: var(--border);
 
     .menuContainer {
         display: flex;
