--- a/client/src/styles/appointments.css
+++ b/client/src/styles/appointments.css
@@ -1,7 +1,7 @@
 .appointmentsPage {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 100px 1fr;
+    grid-template-rows: 50px 1fr;
 
     .dateContainer {
         grid-column: 1 / 2;
@@ -23,6 +23,7 @@
         grid-column: 1 / 3;
         grid-row: 2 / 3;
         border: var(--border);
+        overflow: scroll;
     }
     
 }
