Add some styling

--- a/client/src/styles/appointmentAsListItem.css
+++ b/client/src/styles/appointmentAsListItem.css
@@ -5,6 +5,10 @@
     grid-auto-flow: column;
     grid-template-rows: 30px;
 
+    &:hover {
+        background-color: var(--primary-container);
+    }
+
     .infoContainer {
         overflow: scroll;
     }
