--- a/client/src/styles/appointments.css
+++ b/client/src/styles/appointments.css
@@ -1,6 +1,7 @@
 .appointmentsPage {
 
     .contentContainer {
+        height: 100%;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 50px 50px 1fr;
@@ -12,52 +13,57 @@
             grid-row: 1 / 2;
             display: flex;
             align-items: center;
+            justify-content: start;
             padding-left: var(--medium-gap);
             padding-top: var(--medium-gap);
         }
-    
-    .addNewContainer {
-        grid-column: 2 / 3;
-        grid-row: 1 / 2;
-        padding-top: var(--medium-gap);
-    }
-    
-    .searchContainer {
-        grid-column: 3 / 4;
-        grid-row: 1 / 2;
-        display: flex;
-        align-items: center;
-        padding-right: var(--medium-gap);
-        padding-top: var(--medium-gap);
-    }
-    
-    .headerRowContainer {
-        grid-column: 1 / 4;
-        grid-row: 2 / 3;
-        display: grid;
-        grid-auto-columns: 1fr;
-        grid-auto-flow: column;
-        gap: var(--small-gap);
-        border-top: var(--border);
-        border-bottom: var(--border);
-        padding-right: var(--medium-gap);
-        padding-left: var(--medium-gap);
         
-        & p {
+        .addNewContainer {
+            grid-column: 2 / 3;
+            grid-row: 1 / 2;
+            padding-top: var(--medium-gap);
             display: flex;
             align-items: center;
+            justify-content: center;
         }
         
+        .searchContainer {
+            grid-column: 3 / 4;
+            grid-row: 1 / 2;
+            display: flex;
+            align-items: center;
+            justify-content: end;
+            padding-right: var(--medium-gap);
+            padding-top: var(--medium-gap);
+        }
+        
+        .headerRowContainer {
+            grid-column: 1 / 4;
+            grid-row: 2 / 3;
+            display: grid;
+            grid-auto-columns: 1fr;
+            grid-auto-flow: column;
+            gap: var(--small-gap);
+            border-top: var(--border);
+            border-bottom: var(--border);
+            padding-right: var(--medium-gap);
+            padding-left: var(--medium-gap);
+            
+            & p {
+                display: flex;
+                align-items: center;
+            }
+            
+        }
+        
+        .appointmentListContainer {
+            grid-column: 1 / 4;
+            grid-row: 3 / 4;
+            overflow: scroll;
+            padding-right: var(--medium-gap);
+            padding-left: var(--medium-gap);
+            padding-bottom: var(--medium-gap);
+        }
     }
-    
-    .appointmentListContainer {
-        grid-column: 1 / 4;
-        grid-row: 3 / 4;
-        overflow: scroll;
-        padding-right: var(--medium-gap);
-        padding-left: var(--medium-gap);
-        padding-bottom: var(--medium-gap);
-    }
-}
     
 }
