--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -74,10 +74,11 @@ input, select {
     font-size: 20px;
     text-transform: uppercase;
 
-    &.inactive {
+    &.disabled {
         background-color: var(--inactive);
         color: var(--on-inactive);
         cursor: no-drop;
+        pointer-events: none;
     }
 
 
@@ -91,53 +92,6 @@ input, select {
         justify-content: center;
         align-items: center;
         z-index: 1;
-    }
-      
-    .buttonBorder{
-        position:absolute;
-        background:none;
-        transition: var(--transition);
-    }
-    
-    .buttonBorder:nth-of-type(1){
-        top:0;
-        left:0;
-        width:0;
-        height:0;
-        border-top: var(--border);
-    }
-      
-    .buttonBorder:nth-of-type(2){
-        top:0;
-        right:0;
-        width:10px;
-        height:0;
-        border-right: var(--border);
-    }
-      
-    .buttonBorder:nth-of-type(3){
-        bottom:0;
-        right:0;
-        width:0;
-        height:0;
-        border-bottom: var(--border);
-    }
-    
-    .buttonBorder:nth-of-type(4){
-        bottom:0;
-        left:0;
-        width:0;
-        height:0;
-        border-left: var(--border);
-    }
-
-    &:not(.inactive):hover .buttonBorder {
-        &:nth-of-type(1n) {
-            width:100%;
-        }
-        &:nth-of-type(2n){
-            height:100%;
-        }
     }
 }
 
