--- a/client/src/styles/appointmentFormDialog.css
+++ b/client/src/styles/appointmentFormDialog.css
@@ -6,27 +6,42 @@
         align-items: center;
         justify-content: space-between;
         height: 100%;
+        overflow: scroll;
         
         .infoContainer {
             display: grid;
             grid-template-columns: 1fr 1fr;
             grid-auto-flow: row;
             grid-auto-rows: 1fr;
-            gap: var(--big-gap);
+            gap: var(--medium-gap);
+            padding-bottom: var(--big-gap);
     
             .labelAndInputContainer {
                 display: grid;
-                grid-template-columns: 120px 1fr;
+                grid-template-columns: 100px 1fr;
                 grid-template-rows: min-content;
                 align-items: center;
+            }
+
+            .commentsContainer {
+                justify-self: center;
+                max-width: 500px;
+                grid-column: 1 / 3;
+
+                .commentsTextarea {
+                    resize: none;
+                }
             }
         }
     
         .buttonsContainer {
             width: 100%;
             display: flex;
-            justify-content: space-between;
+            gap: var(--medium-gap);
+
+            .submitButton {
+                margin-left: auto;
+            }
         }
-    
     }
 }
