--- a/client/src/styles/appointmentList.css
+++ b/client/src/styles/appointmentList.css
@@ -4,6 +4,7 @@
     grid-auto-columns: 1fr;
     grid-auto-flow: column;
     grid-template-rows: 30px;
+    user-select: none;
 
     &:hover {
         background-color: var(--primary-container);
