Add styling transitions on date select

--- a/client/src/styles/appointments.css
+++ b/client/src/styles/appointments.css
@@ -12,7 +12,6 @@
             grid-column: 1 / 4;
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
-            padding: var(--small-gap) var(--medium-gap);
 
             .dateContainer {
                 grid-column: 1 / 2;
@@ -25,10 +24,21 @@
                     display: flex;
                     flex-direction: column;
                     align-items: center;
+                    justify-content: center;
                     text-align: center; 
+                    height: 100%;
+                    transition: var(--transition);
+                    padding: 0 var(--small-gap);
+                    user-select: none;
 
                     &.active {
                         background-color: var(--surface-variant);
+                        border-left: var(--border);
+                        border-right: var(--border);
+                    }
+
+                    &.active.todayContainer {
+                        border-left: none;
                     }
                     
                     .fullDate {
@@ -81,6 +91,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: end;
+                padding-right: var(--small-gap);
             }
         }
 
@@ -95,6 +106,11 @@
             border-bottom: var(--border);
             padding-right: var(--medium-gap);
             padding-left: var(--medium-gap);
+            transition: var(--transition);
+
+            &.active {
+                background-color: var(--surface-variant);
+            }
             
             & p {
                 display: flex;
@@ -109,6 +125,11 @@
             padding-right: var(--medium-gap);
             padding-left: var(--medium-gap);
             padding-bottom: var(--medium-gap);
+            transition: var(--transition);
+
+            &.active {
+                background-color: var(--surface-variant);
+            }
         }
     }
     
