--- a/client/src/styles/variables.css
+++ b/client/src/styles/variables.css
@@ -24,12 +24,12 @@
     --on-primary: #ffffff;
     --primary-container: #facae0;
     --on-primary-container: #3d0026;
-    --background: #ebebeb;
+    --background: #f0f3ff;
     --on-background: #1f1a1c;
     --surface: #ffffff;
     --on-surface: #1f1a1c;
     --outline: #827378;
-    --surface-variant: #f1dee3;
+    --surface-variant: #ccd9f9;
     --on-surface-variant: #504348;
     --inactive: lightgrey;
     --on-inactive: black;
