--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -1,6 +1,6 @@
 header.header {
     height: var(--header-height);
-    padding: var(--big-gap) var(--side-padding-for-sections);
+    padding: 0 var(--side-padding-for-sections);
     background-color: var(--surface);
     display: flex;
     align-items: center;
@@ -9,14 +9,29 @@ header.header {
     .menuContainer {
         display: flex;
         gap: var(--big-gap);
+        height: 100%;
 
         .menuItem {
             list-style: none;
+            height: 100%;
             
             .menuLink {
+                display: block;
+                height: 100%;
+                display: flex;
+                align-items: center;
                 text-decoration: none;
                 color: var(--on-background);
+                transition: var(--transition);
+                padding: 0 var(--small-gap);
+
+                &.active {
+                    background-color: var(--surface-variant);
+                    border-left: var(--border);
+                    border-right: var(--border);
+                }
             }
         }
     }
 }
+
