--- a/client/src/styles/variables.css
+++ b/client/src/styles/variables.css
@@ -20,19 +20,24 @@
     --max-content-width: 1200px;
     --side-padding-for-sections: max(7vw, calc((100vw - var(--max-content-width)) / 2));
 
-    --primary: #95416d;
+    --primary: #f56f6f;
     --on-primary: #ffffff;
-    --primary-container: #facae0;
-    --on-primary-container: #3d0026;
+
+    --primary-container: #3160ed;
+    --on-primary-container: #ffffff;
+
     --background: #f0f3ff;
     --on-background: #1f1a1c;
+
     --surface: #ffffff;
     --on-surface: #1f1a1c;
-    --outline: #827378;
     --surface-variant: #ccd9f9;
     --on-surface-variant: #504348;
+
     --inactive: lightgrey;
     --on-inactive: black;
+    
+    --outline: #827378;
 
     --border: 1px solid var(--outline);
     --border-radius: 4px;
