Change search process to just 1 field instead of form

--- a/client/src/styles/patients.css
+++ b/client/src/styles/patients.css
@@ -25,6 +25,12 @@
                 align-items: center;
                 justify-content: end;
                 padding-right: var(--medium-gap);
+                gap: var(--medium-gap);
+
+                .searchLabel {
+                    display: flex;
+                    align-items: center;
+                }
             }
         }
 
