--- a/client/src/styles/patientFormDialog.css
+++ b/client/src/styles/patientFormDialog.css
@@ -1,20 +1,28 @@
 .patientFormDialog {
 
+    &[open] {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: var(--big-gap);
+    }
+
     .patientForm {
+        flex-shrink: 0;
         display: flex;
         justify-content: center;
+        align-items: center;
         flex-wrap: wrap;
-        height: 100%;
-        overflow: scroll;
+        padding-top: calc(var(--medium-gap) + var(--big-gap));
+        max-width: var(--max-content-width);
         
         .infoContainer {
-            align-self: end;
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr 1fr 1fr;
             grid-auto-flow: row;
-            grid-auto-rows: 1fr;
+            grid-auto-rows: max-content;
             gap: var(--medium-gap);
-            padding-bottom: var(--big-gap);
     
             .labelAndInputContainer {
                 display: grid;
@@ -25,14 +33,42 @@
         }
     
         .buttonsContainer {
+            grid-column: 1 / 4;
+            grid-row: -1 -2;
             width: 100%;
             display: flex;
-            gap: var(--medium-gap);
-            align-self: end;
+            justify-content: space-between;
+        }
+    }
 
-            .submitButton {
-                margin-left: auto;
+    .appointmentsListAndHeaderContainer {
+        flex-shrink: 1;
+        border: var(--border);
+        width: min(100%, var(--max-content-width));
+        overflow: scroll;
+
+        .headerRowContainer {
+            display: grid;
+            grid-auto-flow: column;
+            grid-auto-columns: 1fr;
+            border-bottom: var(--border);
+
+            & p:first-of-type {
+                padding-left: var(--medium-gap);
+            }
+            
+            & p:last-of-type {
+                padding-right: var(--medium-gap);
             }
         }
+
+        .appointmentListContainer {
+            
+            .noAppointmentsFoundLine {
+                padding-left: var(--medium-gap);
+            }
+        }
+        
+
     }
 }
