--- a/client/src/styles/appointmentFormDialog.css
+++ b/client/src/styles/appointmentFormDialog.css
@@ -1,4 +1,6 @@
 .appointmentFormDialog {
+    max-width: 80vw;
+    height: 80vh;
 
     .appointmentForm {
         display: flex;
@@ -6,6 +8,7 @@
         flex-wrap: wrap;
         height: 100%;
         overflow: scroll;
+        padding-top: calc(var(--big-gap) * 2);
         
         .infoContainer {
             align-self: end;
