--- a/client/src/styles/appointments.css
+++ b/client/src/styles/appointments.css
@@ -91,7 +91,20 @@
                 display: flex;
                 align-items: center;
                 justify-content: end;
+                padding-left: var(--medium-gap);
                 padding-right: var(--medium-gap);
+                gap: var(--medium-gap);
+                transition: var(--transition);
+
+                &.active {
+                    background-color: var(--surface-variant);
+                    border-left: var(--border);
+                }
+
+                .searchLabel {
+                    display: flex;
+                    align-items: center;
+                }
             }
         }
 
