--- a/client/src/styles/patientFormDialog.css
+++ b/client/src/styles/patientFormDialog.css
@@ -35,11 +35,9 @@
         }
     
         .buttonsContainer {
-            grid-column: 1 / 4;
-            grid-row: -1 -2;
-            width: 100%;
-            display: flex;
+            display: flex!important;
             justify-content: space-between;
+            grid-column: 1 / 4;
         }
     }
 
@@ -81,5 +79,6 @@
         .infoContainer {
             align-self: center;
         }
+
     }
 }
