Add search appointments

--- a/client/src/styles/appointmentList.css
+++ b/client/src/styles/appointmentList.css
@@ -24,4 +24,8 @@
             padding-right: var(--medium-gap);
         }
     }
+
+    .noAppointmentsFoundLine {
+        padding-left: var(--medium-gap);
+    }
 }
