Work on time picker

--- a/client/src/styles/appointmentFormDialog.css
+++ b/client/src/styles/appointmentFormDialog.css
@@ -25,6 +25,9 @@
                 grid-template-rows: min-content;
                 align-items: center;
 
+                .react-datepicker__input-container {
+                    
+                }
                 
             }
 
