Add date picker readnOnly value based on page

--- a/client/src/styles/patientFormDialog.css
+++ b/client/src/styles/patientFormDialog.css
@@ -41,6 +41,12 @@
         }
     }
 
+    .appointmentsLine {
+        font-style: italic;
+        align-self: start;
+        font-weight: 700;
+    }
+
     .appointmentsListAndHeaderContainer {
         flex-shrink: 1;
         border: var(--border);
