--- a/client/src/styles/appointmentFormDialog.css
+++ b/client/src/styles/appointmentFormDialog.css
@@ -25,8 +25,8 @@
                 grid-template-rows: min-content;
                 align-items: center;
 
-                .react-datepicker__input-container {
-                    
+                .timeHiddenInputField {
+                    display: none;
                 }
                 
             }
